--- a/rv-app/public/index.html
+++ b/rv-app/public/index.html
@@ -105,7 +105,7 @@
     </svg>
   </head>
   <body>
-    <rv-app></rv-app>
+    <rv-run-page></rv-run-page>
     <script type="module" src="build/main.js"></script>
   </body>
 </html>
