--- a/index.html
+++ b/index.html
@@ -71,22 +71,28 @@
       }
 
       .video-wrapper {
-        position: fixed;
+        position: relative;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: auto;
         z-index: -2;
-        padding: 20px;
+        padding: 0;
         box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        min-height: 100vh;
       }
 
       .video-layer {
         position: absolute;
         top: 20px;
-        left: 20px;
-        width: calc(100% - 40px);
-        height: calc(100% - 40px);
+        left: 50%;
+        transform: translateX(-50%);
+        width: 640px;         /* Set your desired width */
+        max-width: 90vw;      /* Responsive on small screens */
+        height: 360px;        /* Set your desired height */
         object-fit: cover;
         transition: opacity 1.5s;
         border-radius: 12px;
@@ -621,6 +627,6 @@
         statusEl.textContent = 'Status: Stopped';
       });
     </script>
-    <script type="module" src="./renderer.js"></script>
+    <script type="module" src="build/main.js"></script>
   </body>
 </html>
