added files: renderer/getRunPlan.js, renderer/renderer/runEngine.js

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -241,11 +241,8 @@
     >HUD</button>
 
     <div id="video-player-container">
-      <video
-        id="video-player"
-        playsinline
-        aria-label="Session video"
-      ></video>
+      <video id="v1" class="atom-video active" muted playsinline aria-label="Video layer 1"></video>
+      <video id="v2" class="atom-video" muted playsinline aria-label="Video layer 2"></video>
       <div id="video-controls" aria-label="Video controls">
         <button id="video-play" type="button" class="frame-rect">Play</button>
         <button id="video-pause" type="button" class="frame-rect">Pause</button>
