--- a/renderer/hallucination-controls.html
+++ b/renderer/hallucination-controls.html
@@ -231,8 +231,185 @@
 
   <div id="controls-container">
     <h1>Hallucination Controls</h1>
+    <div id="hud-controls-panel" style="margin-bottom: 2rem; padding: 1.25rem; border-radius: 12px; background: rgba(15, 23, 42, 0.6); color: #e2e8f0; box-shadow: 0 10px 30px rgba(0,0,0,0.35);">
+      <h2 style="margin-top: 0; margin-bottom: 1rem; color: #e63946; filter: url(#ballpoint-ink);">HUD Controls</h2>
+      <div id="music-controller" class="row" style="margin-bottom: 12px; padding: 16px; border-radius: 12px; background: rgba(15, 23, 42, 0.65);">
+        <h3 style="margin: 0 0 12px; font-size: 1.1rem; color: #e63946; filter: url(#ballpoint-ink);">🎵 Music Control</h3>
+        <input type="file" id="music-file-input" accept=".mp3,.wav,.ogg,.m4a" style="display: block; margin-bottom: 10px; padding: 6px 10px; border-radius: 6px; background: rgba(51, 65, 85, 0.5); border: 1px solid rgba(148, 163, 184, 0.2); color: #e2e8f0; cursor: pointer; font-size: 0.9rem;" />
+        <div style="margin-bottom: 10px;">
+          <button id="music-play" type="button" class="frame-rect" disabled style="margin-right: 6px;">Play</button>
+          <button id="music-pause" type="button" class="frame-rect" disabled style="margin-right: 6px;">Pause</button>
+          <button id="music-stop" type="button" class="frame-rect" disabled>Stop</button>
+        </div>
+        <div class="music-info" style="font-size: 0.85em; opacity: 0.8; filter: url(#ballpoint-ink);">
+          <div id="music-file-name">No file loaded</div>
+          <div id="music-bpm">BPM: --</div>
+          <div id="music-status">Status: Idle</div>
+        </div>
+      </div>
+      <div class="row" id="google-auth-row" style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px; opacity: 0.7;">
+        <button id="google-sign-in" type="button" class="frame-rect" disabled title="Google auth is inactive on this controls page">Sign in with Google</button>
+        <span id="google-auth-status" style="opacity: 0.7;">Google auth unavailable on this page</span>
+      </div>
+      <div class="row" id="video-playlist-row" style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px; flex-wrap: wrap;">
+        <strong style="margin-right: 6px; filter: url(#ballpoint-ink);">Playlist:</strong>
+        <select id="video-playlists" disabled style="min-width: 220px;" title="Disabled: legacy background video system is inactive"></select>
+        <button id="video-load" type="button" class="frame-rect" disabled title="Disabled: playlist controls are inactive">Load</button>
+        <button id="video-prev" type="button" class="frame-rect" disabled title="Disabled: playlist controls are inactive">⏮️</button>
+        <button id="video-next" type="button" class="frame-rect" disabled title="Disabled: playlist controls are inactive">⏭️</button>
+        <button id="video-shuffle" type="button" class="frame-rect" disabled title="Disabled: playlist controls are inactive">🔀</button>
+        <button id="video-refresh" type="button" class="frame-rect" disabled title="Disabled: playlist controls are inactive">↻</button>
+        <label style="margin-left: 8px; filter: url(#ballpoint-ink);">Volume</label>
+        <input id="video-volume" type="range" min="0" max="100" step="1" value="50" disabled title="Disabled: playlist controls are inactive" />
+        <span id="playlist-status" style="margin-left: 10px; font-size: 0.85em; opacity: 0.7;">Background playlist system disabled</span>
+      </div>
+      <div class="row" style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px; flex-wrap: wrap;">
+        <strong style="filter: url(#ballpoint-ink);">Tag:</strong>
+        <button data-tag="Dreamcore" class="frame-rect">Dreamcore</button>
+        <button data-tag="Ambient" class="frame-rect">Ambient</button>
+        <button data-tag="Urban" class="frame-rect">Urban</button>
+        <span id="current-tag" style="margin-left:12px; opacity: 0.6;">None</span>
+      </div>
+      <div class="row" id="fit-status-row" style="font-size: 0.85em; opacity: 0.75; display: flex; align-items: center; gap: 12px;">
+        <span id="fit-status">Google Fit inactive on this page</span>
+        <span style="margin-left: auto;">Session: <span id="session-time">0:00</span></span>
+      </div>
+      <div class="row" style="margin-top: 12px; display: flex; gap: 10px; flex-wrap: wrap;">
+        <a href="hand-drawn-demo.html" target="_blank" class="frame-rect" style="text-decoration: none; padding: 10px 14px; display: inline-block;">Hand-Drawn Demo</a>
+        <a href="index.html" class="frame-rect" style="text-decoration: none; padding: 10px 14px; display: inline-block;">Back to HUD</a>
+      </div>
+    </div>
     <div id="hallucination-controls-mount"></div>
   </div>
+
+  <script type="module">
+    import { recordTag } from './hallucinationEngine.js';
+    import { startTimer } from './timer.js';
+
+    // Music controller
+    let audioContext = null;
+    let audioBuffer = null;
+    let sourceNode = null;
+    let analyserNode = null;
+    let isPlaying = false;
+    let startTime = 0;
+    let pauseTime = 0;
+
+    const fileInput = document.getElementById('music-file-input');
+    const playBtn = document.getElementById('music-play');
+    const pauseBtn = document.getElementById('music-pause');
+    const stopBtn = document.getElementById('music-stop');
+    const fileNameEl = document.getElementById('music-file-name');
+    const bpmEl = document.getElementById('music-bpm');
+    const statusEl = document.getElementById('music-status');
+
+    function initAudioContext() {
+      if (!audioContext) {
+        audioContext = new (window.AudioContext || window.webkitAudioContext)();
+        analyserNode = audioContext.createAnalyser();
+        analyserNode.fftSize = 2048;
+        analyserNode.connect(audioContext.destination);
+      }
+    }
+
+    function playMusic() {
+      if (!audioBuffer || !audioContext) return;
+      if (audioContext.state === 'suspended') {
+        audioContext.resume();
+      }
+      if (sourceNode) {
+        sourceNode.stop();
+      }
+      sourceNode = audioContext.createBufferSource();
+      sourceNode.buffer = audioBuffer;
+      sourceNode.connect(analyserNode);
+
+      const offset = pauseTime;
+      sourceNode.start(0, offset);
+      startTime = audioContext.currentTime - offset;
+      isPlaying = true;
+      statusEl.textContent = 'Status: Playing';
+
+      sourceNode.onended = () => {
+        if (isPlaying) {
+          isPlaying = false;
+          pauseTime = 0;
+          statusEl.textContent = 'Status: Ended';
+        }
+      };
+    }
+
+    function pauseMusic() {
+      if (!sourceNode || !isPlaying) return;
+      sourceNode.stop();
+      pauseTime = audioContext.currentTime - startTime;
+      isPlaying = false;
+      statusEl.textContent = 'Status: Paused';
+    }
+
+    function stopMusic() {
+      if (sourceNode) {
+        sourceNode.stop();
+      }
+      pauseTime = 0;
+      isPlaying = false;
+      statusEl.textContent = 'Status: Stopped';
+    }
+
+    if (fileInput) {
+      fileInput.addEventListener('change', async (e) => {
+        const file = e.target.files[0];
+        if (!file) return;
+
+        initAudioContext();
+        fileNameEl.textContent = `Loading: ${file.name}`;
+        statusEl.textContent = 'Status: Loading...';
+
+        try {
+          const arrayBuffer = await file.arrayBuffer();
+          audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
+
+          fileNameEl.textContent = `Loaded: ${file.name}`;
+          statusEl.textContent = 'Status: Ready';
+          playBtn.disabled = false;
+          pauseBtn.disabled = false;
+          stopBtn.disabled = false;
+
+          bpmEl.textContent = 'BPM: ~120';
+        } catch (err) {
+          console.error('Error loading audio:', err);
+          fileNameEl.textContent = 'Error loading file';
+          statusEl.textContent = 'Status: Error';
+        }
+      });
+    }
+
+    playBtn?.addEventListener('click', playMusic);
+    pauseBtn?.addEventListener('click', pauseMusic);
+    stopBtn?.addEventListener('click', stopMusic);
+
+    // Tag buttons
+    const tagButtons = document.querySelectorAll('button[data-tag]');
+    const tagDisplay = document.getElementById('current-tag');
+    tagButtons.forEach((btn) => {
+      btn.addEventListener('click', () => {
+        const tag = btn.dataset.tag;
+        if (!tag) return;
+        if (tagDisplay) {
+          tagDisplay.textContent = tag;
+        }
+        recordTag(tag, 'HUD Controls');
+        localStorage.setItem('selectedTag', tag);
+      });
+    });
+    const saved = localStorage.getItem('selectedTag');
+    if (saved && tagDisplay) {
+      tagDisplay.textContent = saved;
+    }
+
+    // Fit status timer (display only)
+    startTimer(document.getElementById('session-time'));
+  </script>
 
   <script type="module">
     import { 
