Fix HUD transport controls for atom engine

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -180,8 +180,8 @@
       <video id="v2" class="atom-video" muted playsinline aria-label="Video layer 2"></video>
       <div id="video-controls" aria-label="Video controls">
         <button id="video-play" type="button" class="frame-rect">Play</button>
-        <button id="video-pause" type="button" class="frame-rect" disabled title="Pause is unavailable for atom playback">Pause</button>
-        <button id="video-stop" type="button" class="frame-rect" disabled title="Stop is unavailable for atom playback">Stop</button>
+        <button id="video-pause" type="button" class="frame-rect" title="Pause atom engine playback">Pause</button>
+        <button id="video-stop" type="button" class="frame-rect" title="Stop atom engine playback">Stop</button>
       </div>
     </div>
 
