--- a/renderer/index.html
+++ b/renderer/index.html
@@ -10,7 +10,7 @@
 
     RESOLUTION:
     • Navigation must happen via an explicit button
-      (e.g. “Open Workahol Enabler”).
+      (e.g. “Open default”).
   ============================================================
 -->
 
@@ -54,7 +54,7 @@
             • a navigation link
             • an iframe pointing to /rv
       - rv-app was an isolated application until the
-        “Open Workahol Enabler” button was later added manually.
+        “Open default” button was later added manually.
 
     Reason for Design:
       - HUD stays lightweight for overlays, step counters, playlists.
@@ -79,7 +79,7 @@
         * This page DOES NOT embed <rv-app>.
         * rv-app is a separate application served at /rv.
         * Navigation is intentionally done via a button:
-              “Open Workahol Enabler”
+              “Open default”
         * rv-app lives in rv-app/public/index.html and mounts <rv-app>.
 
     - Reason:
