--- a/renderer/hallucination-controls.html
+++ b/renderer/hallucination-controls.html
@@ -40,6 +40,32 @@
       position: relative;
     }
 
+    .back-button {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 1000;
+      background: rgba(230, 57, 70, 0.9);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      font-size: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      transition: transform 0.2s, background 0.2s;
+    }
+
+    .back-button:hover {
+      transform: scale(1.05);
+      background: rgba(230, 57, 70, 1);
+    }
+
     h1 {
       color: var(--accent);
       margin-bottom: 0.5rem;
@@ -206,6 +232,14 @@
   </style>
 </head>
 <body style="margin: 0; background-image: url('/assets/thenotebookpiece2.png'); background-attachment: scroll; background-size: cover; background-position: center; background-repeat: no-repeat; color: #1a0000; padding: 2rem; min-height: 100vh; font-family: var(--rv-font);">
+  <!-- Back navigation button -->
+  <a href="index.html" class="back-button">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M19 12H5M12 19l-7-7 7-7"></path>
+    </svg>
+    Run
+  </a>
+
   <!-- Import ballpoint ink filter for notebook aesthetic on headings -->
   <svg width="0" height="0" style="position: absolute; pointer-events: none;" aria-hidden="true">
     <defs>
